# multiproject-python

./: .env.example  .flake8  .gcloudignore  .gitignore  Makefile  Procfile  README.md  alembic.ini  pyproject.toml
.github/actions/install-python/: action.yml
.github/workflows/: pipeline.yml
applications/starter_app/: pyproject.toml
applications/starter_app/starter_app/: __main__.py  accounts_page.py  dashboard_page.py  environment.py  health_api.py  index_page.py  new_account_page.py  oauth_api.py  starter_app.py
applications/starter_app/starter_app/static/css/: app.css  base.css  flash.css  forms.css  tables.css  theme.css
applications/starter_app/starter_app/templates/: account.html  accounts.html  dashboard.html  index.html  layout.html  new_account.html
applications/starter_app/tests/: blueprint_test_support.py  test_accounts_page.py  test_health_api.py  test_new_accounts_page.py
components/accounts/: pyproject.toml
components/accounts/accounts/: accounts_gateway.py  accounts_service.py  memberships_gateway.py  random_name_generator.py  users_gateway.py
components/accounts/tests/: test_accounts_gateway.py  test_accounts_service.py  test_memberships_gateway.py  test_users_gateway.py
components/authentication/: pyproject.toml
components/authentication/authentication/: allowed_emails.py  authenticate_user.py  oauth_client.py
components/authentication/tests/: test_allowed_emails.py  test_oauth_client.py
components/database_support/: pyproject.toml
components/database_support/database_support/: database_template.py  result_mapping.py
components/test_support/: pyproject.toml
components/test_support/test_support/: blueprint_test_support.py  db_template.py  unwrap_optional.py
databases/: drop_and_create_databases.sql
databases/starter_db/: env.py
databases/starter_db/versions/: 0c42ad691606_create_account_tables.py
deployments/: GOOGLE_CLOUD.md
