[tool.poetry]
name = "accounts"
version = "0.1.0"
description = ""
authors = ["Tyson Gern <tyson@initialcapacity.io>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.22"
database_support = { path = "../database_support", develop = true }


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"


[tool.poetry.group.test.dependencies]
test_support = { path = "../test_support", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
