[tool.poetry]
name = "database_support"
version = "0.1.0"
description = ""
authors = ["Tyson Gern <tyson@initialcapacity.io>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.22"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
